# clearpath-autonomy

clearpath_drivers/: README.md
clearpath_msgs/: CMakeLists.txt  package.xml
clearpath_software/motion/global_planning/astar/: CMakeLists.txt  README.MD  package.xml  setup.py
clearpath_software/motion/global_planning/astar/scripts/: astar_potential_field.py  heuristics.py  main.py
clearpath_software/motion/local_planning/rrtstar/: CMakeLists.txt  setup.py
clearpath_software/motion/local_planning/rrtstar/scripts/: main.py  rrt_base.py  tree.py
clearpath_software/motion/local_planning/rrtstar/src/rrtstar/: geometry.py  heuristics.py
clearpath_software/motion/planning_local/rrtstar/: package.xml
clearpath_software/motion/planning_local/rrtstar/scripts/: main.py  rrt_star.py  test_main.py
clearpath_software/navigation/localization/omnidirectional_ekf/: CMakeLists.txt  package.xml
clearpath_software/navigation/localization/omnidirectional_ekf/config/: imu_and_odom.yaml
clearpath_software/navigation/localization/omnidirectional_ekf/launch/: ekf.launch
clearpath_software/navigation/mapping/: CMakeLists.txt  package.xml
clearpath_software/navigation/mapping/launch/: publish_map.launch
clearpath_software/navigation/mapping/maps/: cognite_office_map.pgm  cognite_office_map.yaml
clearpath_software/navigation/perception/lidar_2d_mapping/: CMakeLists.txt  package.xml
clearpath_software/navigation/perception/lidar_2d_mapping/config/: jackal.lua  kinect.lua  laser.lua  pr2.lua  velodyne.lua
clearpath_software/navigation/perception/lidar_2d_mapping/launch/: cartographer.launch  cartographer_demo.launch
clearpath_urdf/jackal_broadcaster/launch/: jackal_broadcaster.launch
clearpath_urdf/jackal_description/config/rviz/: path_and_obstacles.rviz
clearpath_urdf/jackal_description/launch/: description.launch  rviz.launch
clearpath_urdf/jackal_description/urdf/: jackal.urdf.xacro  sensors.xacro
clearpath_urdf/jackal_description/urdf/sensors/: VLP-16.urdf.xacro  kinect.urdf.xacro
(+2 files in other folders)
