<?xml version="1.0"?>
<package format="2">
  <name>omnidirectional_ekf</name>
  <version>0.0.0</version>
  <description>The omnidirectional_ekf package</description>
  <maintainer email="kristoffer@todo.todo">kristoffer</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>robot_localization</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->


  </export>
</package>
