<?xml version="1.0"?>
<package format="2">
  <name>lidar_2d_mapping</name>
  <version>0.0.1</version>
  <description>Launch files and code for autonomous navigation of the Jackal using Google Cartographer</description>
  <author email="kristoffer.solberg@cognite.com.com">Kristoffer Solberg</author>
  <maintainer email="kristoffer.solberg@cognite.com.com">Kristoffer Solberg</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>map_server</exec_depend>
<!--  <exec_depend>move_base</exec_depend> -->
<!--  <exec_depend>jackal_navigation</exec_depend> -->
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>roslaunch</test_depend>

  <export>
  </export>
</package>
